# LightPcapNg

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: zlib.cmake  zstd.cmake
include/: light_compression.h  light_debug.h  light_dsb_secrets.h  light_export.h  light_file.h  light_internal.h  light_io.h  light_io_file.h  light_io_internal.h  light_io_mem.h  light_io_zlib.h  light_io_zstd.h  light_pcapng.h  light_pcapng_ext.h  light_platform.h  light_special.h  light_types.h  light_util.h  light_zstd_compression.h
pcaps/: caneth.pcapng  caneth.pcapng.zst
src/: endianness.h  light_advanced.c  light_alloc.c  light_debug.h  light_internal.c  light_io.c  light_io_file.c  light_io_internal.h  light_io_mem.c  light_io_zlib.c  light_io_zstd.c  light_manipulate.c  light_option.c  light_pcapng.c  light_pcapng_ext.c  light_platform.c  light_zstd_compression.c
src/tests/: test_feature.c  test_read_packets.c  test_read_write.c  test_read_write_packets.c  test_subcapture.c
tests/: CMakeLists.txt  _util.h  test_blocks_dump.c  test_blocks_merge.c  test_io_mem.c  test_mem.c  test_packets_dump.c  test_packets_merge.c  test_read_packets.c  test_read_write.c  test_read_write_packets.c  test_subcapture.c  test_write_pcapng.c  test_write_read_dsb.c  test_write_tls_decryption_block.c  test_zstd_compression_level.c  test_zstd_workers.c
tests/results/: blocks.dump.caneth_pcapng_gz.txt  blocks.dump.dhcp_big_endian_pcapng.txt  blocks.dump.many_interfaces_pcapng.txt  blocks.merged.pcapng  packets.dump.caneth_pcapng_zst.txt  packets.dump.dhcp_big_endian_pcapng.txt  packets.dump.many_interfaces_pcapng.txt  packets.merged.pcapng  test_write_decryption_block.pcapng  test_write_pcapng.pcapng
